--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,6 +14,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.0",
+    "react-truncate": "^2.4.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "web-vitals": "^0.2.4"
@@ -50,9 +53,9 @@
     ]
   },
   "devDependencies": {
+    "node-sass": "4.14.1",
     "pre-commit": "^1.2.2",
-    "pre-push": "^0.1.1",
-    "node-sass": "4.14.1"
+    "pre-push": "^0.1.1"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
